<resources>
    <string name="app_name">OnlineCinema</string>
    <string name="home_title">Home</string>
    <string name="account_title">Account</string>
    <string name="library_title">Library</string>
    <string name="search_title">Search</string>
    <string name="language_title">Language</string>
    <string name="logout_title">Logout</string>
    <string name="name_hint">Full name</string>
    <string name="log_in"> Log in</string>
    <string name="sign_in">Sign in</string>
    <string name="guest">Log in as a guest</string>
    <string name="subscription_title">Subscription</string>
    <string name="theme_title">Theme</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="see_all_title">See all</string>
    <string name="incorrect_data">Incorrect data</string>


    <!--Home screen-->
    <!--Home screen-->

    <!--FilmDetails-->
    <string name="film_details_desc_title">Descriptions</string>
    <string name="film_details_star_cast_title">Star Cast</string>
    <string name="film_details_title_activity">FilmDetailsActivity</string>
    <!--FilmDetails-->

    <!--Search screen-->
    <string name="search_filter_tab_title">Categories</string>
    <string name="search_query_tab_title">Search</string>
    <!--Search screen-->

    <!--Account screen-->
    <string name="account_favorite_setting">Favorite</string>
    <string name="account_wishlist_setting">Wishlist</string>
    <string name="account_logout_setting">Log out</string>
    <string name="account_edit_setting">Edit</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="account_save_btn">Save</string>
    <string name="success_save">Changes successfully saved</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="category_action">Action</string>
    <string name="category_comedy">Comedy</string>
    <string name="category_16">16+</string>
    <string name="category_drama">Drama</string>
    <string name="category_fantasy">Fantasy</string>
    <string name="category_history">History</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!--Account screen-->
</resources>