<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/black">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tiName"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="256dp"
        android:hint="@string/name_hint"
        android:textColorHint="@color/primary"
        app:boxBackgroundColor="@color/black"
        app:boxCornerRadiusBottomEnd="@dimen/default_card_corner_radius"
        app:boxCornerRadiusBottomStart="@dimen/default_card_corner_radius"
        app:boxCornerRadiusTopEnd="@dimen/default_card_corner_radius"
        app:boxCornerRadiusTopStart="@dimen/default_card_corner_radius"
        app:boxStrokeColor="@color/selector_edit_fields"
        app:boxStrokeWidth="1dp"
        app:hintTextColor="@color/primary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textColor="@color/white" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivUserAvatar"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginStart="@dimen/default_margin"
        android:layout_marginTop="44dp"
        android:background="@drawable/user_avatar_bg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tiEmail"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="168dp"
        android:hint="@string/email_hint"
        android:textColorHint="@color/primary"
        app:boxBackgroundColor="@color/black"
        app:boxCornerRadiusBottomEnd="@dimen/default_card_corner_radius"
        app:boxCornerRadiusBottomStart="@dimen/default_card_corner_radius"
        app:boxCornerRadiusTopEnd="@dimen/default_card_corner_radius"
        app:boxCornerRadiusTopStart="@dimen/default_card_corner_radius"
        app:boxStrokeColor="@color/selector_edit_fields"
        app:boxStrokeWidth="1dp"
        app:hintTextColor="@color/primary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textColor="@color/white" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="168dp"
        android:layout_height="51dp"
        android:layout_marginTop="228dp"
        android:textAllCaps="false"
        android:text="@string/account_save_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tiEmail" />

</androidx.constraintlayout.widget.ConstraintLayout>